# fin-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/commands/: config-scout.md  doc-sync.md  release-alph.md
.github/workflows/: ci.yml  release.yml
Formula/: fin.rb
src/fin/: __init__.py  alph_interface.py  cli.py  config.py  core.py  display.py  editor.py
tests/: conftest.py  test_alph_interface.py  test_cli.py  test_config.py  test_core.py  test_display.py  test_editor.py
